package com.example.restaurantreservation.floor.domain.enums;

public enum TableType {
    INDOOR, OUTDOOR, BOOTH, BAR
}
