package com.example.restaurantreservation.loyalty.domain.enums;

public enum LoyaltyTier {
    BRONZE, SILVER, GOLD, PLATINUM
}
