@startuml
title Restaurant Reservation System - Milestone 2 DDD Domain Model

skinparam linetype ortho
skinparam nodesep 45
skinparam ranksep 55
skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontSize 11

skinparam package {
    BackgroundColor #FAFAFA
    BorderColor #555555
    FontStyle bold
    FontSize 13
}

skinparam class {
    BorderColor #333333
    FontSize 11
    AttributeFontSize 10
}

package "Reservation Aggregator Bounded Context\n<<Core Orchestrating Subdomain>>" #DCEBFF {
    class ReservationAggregate <<Aggregate Root>>\n<<Entity, Mongo Document>> #DCEBFF {
        aggregateId : String
        bookingId : Long
        preOrderId : Long [0..1]
        customerId : Long
        tableId : Long
        reservationDate : LocalDate
        timeSlotStart : LocalTime
        timeSlotEnd : LocalTime
        partySize : Integer
        status : String
        totalAmount : Money
        loyaltyPointsEarned : Integer
        createdAt : LocalDateTime
        updatedAt : LocalDateTime
    }

    class PreOrderItemSnapshot <<Entity Snapshot>> #DCEBFF {
        menuItemId : Long
        menuItemName : String
        quantity : Integer
        unitAmount : Money
        lineTotal : Money
        availableAtDecisionTime : Boolean
    }

    class DiningTableSnapshot <<Value Snapshot>> #DCEBFF {
        tableId : Long
        tableNumber : String
        seatingCapacity : Integer
        tableType : TableType
        status : TableStatus
        sectionName : String
    }

    class LoyaltyAccountSnapshot <<Value Snapshot>> #DCEBFF {
        accountId : Long
        customerId : Long
        pointsBalance : Integer
        tier : LoyaltyTier
    }

    ReservationAggregate "1" *-- "1..*" PreOrderItemSnapshot : computed pre-order
    ReservationAggregate "1" *-- "0..1" DiningTableSnapshot : table snapshot
    ReservationAggregate "1" *-- "0..1" LoyaltyAccountSnapshot : loyalty snapshot
    PreOrderItemSnapshot "1" *-- "1" Money : unitAmount and lineTotal
    ReservationAggregate "1" *-- "1" Money : totalAmount
}

package "Reservation Operations Bounded Context\n<<Low-level Subdomain>>" #E8D5F5 {
    class TableBooking <<Aggregate Root>>\n<<Entity>> #E8D5F5 {
        bookingId : Long
        customerId : Long
        tableId : Long
        preOrderId : Long [0..1]
        reservationDate : LocalDate
        timeSlotStart : LocalTime
        timeSlotEnd : LocalTime
        partySize : Integer
        status : BookingStatus
        loyaltyPointsEarned : Integer
        createdAt : LocalDateTime
    }

    class PreOrder <<Aggregate Root>>\n<<Entity>> #E8D5F5 {
        preOrderId : Long
        bookingId : Long
        totalAmount : Money
        currency : String
        status : PreOrderStatus
        submittedAt : LocalDateTime
    }

    class OrderLineItem <<Entity>> #E8D5F5 {
        lineItemId : Long
        menuItemId : Long
        quantity : Integer
        unitAmount : Money
    }

    class DiningTable <<Entity>> #E8D5F5 {
        tableId : Long
        tableNumber : String
        seatingCapacity : Integer
        tableType : TableType
        status : TableStatus
        sectionId : Long
        positionX : Integer
        positionY : Integer
    }

    class FloorSection <<Entity>> #E8D5F5 {
        sectionId : Long
        sectionName : String
    }

    class BookingStatus <<Value Object>> #F5D5CC {
        value : PENDING | CONFIRMED | SEATED | COMPLETED | CANCELLED
    }

    class PreOrderStatus <<Value Object>> #F5D5CC {
        value : DRAFT | SUBMITTED | CONFIRMED | PREPARED
    }

    class TableType <<Value Object>> #F5D5CC {
        value : INDOOR | OUTDOOR | BOOTH | BAR
    }

    class TableStatus <<Value Object>> #F5D5CC {
        value : AVAILABLE | RESERVED | OCCUPIED | MAINTENANCE
    }

    FloorSection "1" o-- "0..*" DiningTable : contains
    TableBooking "1" *-- "0..1" PreOrder : optional pre-order
    PreOrder "1" *-- "0..*" OrderLineItem : items
    TableBooking ..> DiningTable : reserves by tableId
    PreOrder ..> TableBooking : belongs to bookingId
    OrderLineItem "1" *-- "1" Money : unitAmount
    PreOrder "1" *-- "1" Money : totalAmount
}

package "Menu Management Bounded Context\n<<Supporting Subdomain>>" #D5E8F5 {
    class Menu <<Aggregate Root>>\n<<Entity>> #D5E8F5 {
        menuId : Long
        name : String
        effectiveDate : LocalDate
    }

    class MenuItem <<Entity>> #D5E8F5 {
        menuItemId : Long
        menuId : Long
        name : String
        description : String
        amount : Money
        category : MenuCategory
        isAvailable : Boolean
        dietaryTags : String
    }

    class MenuCategory <<Value Object>> #F5D5CC {
        value : APPETIZER | MAIN | DESSERT | BEVERAGE
    }

    class MenuItemIdentifier <<Value Object>> #FFFACC {
        menuItemId : Long
    }

    Menu "1" o-- "0..*" MenuItem : contains
    MenuItem "1" *-- "1" Money : price
}

package "Loyalty Management Bounded Context\n<<Supporting Subdomain>>" #FDE9CC {
    class LoyaltyAccount <<Aggregate Root>>\n<<Entity>> #FDE9CC {
        accountId : Long
        customerId : Long
        pointsBalance : Integer
        tier : LoyaltyTier
        enrollmentDate : LocalDate
    }

    class PointsTransaction <<Entity>> #FDE9CC {
        transactionId : Long
        accountId : Long
        points : Integer
        transactionType : TransactionType
        referenceId : Long
        transactionDate : LocalDateTime
    }

    class LoyaltyTier <<Value Object>> #F5D5CC {
        value : BRONZE | SILVER | GOLD | PLATINUM
    }

    class TransactionType <<Value Object>> #F5D5CC {
        value : EARNED | REDEEMED | EXPIRED | ADJUSTED
    }

    class CustomerReference <<Value Object>> #FFFACC {
        customerId : Long
    }

    LoyaltyAccount "1" *-- "0..*" PointsTransaction : transactions
    LoyaltyAccount "1" *-- "1" CustomerReference : customerId
}

class Money <<Value Object>> #F5D5CC {
    amount : BigDecimal
    currency : String
}

ReservationAggregate ..> TableBooking : orchestrates create/update/delete
ReservationAggregate ..> PreOrder : orchestrates computed pre-order
ReservationAggregate ..> MenuItem : verifies availability and price
ReservationAggregate ..> LoyaltyAccount : reads account and posts earned points
PreOrderItemSnapshot ..> MenuItemIdentifier : references menu item by id
OrderLineItem ..> MenuItemIdentifier : references menu item by id
TableBooking ..> CustomerReference : references customer by id
PointsTransaction ..> TableBooking : references completed bookingId

note as AggregateInvariant #DCEBFF
  <b>ReservationAggregate Invariant</b>
  A reservation pre-order can be created or updated
  only when every requested MenuItem is available.

  totalAmount must be computed from Menu Service
  prices at orchestration time. Client input is not
  trusted for menu item price or aggregate total.
end note

note as ReservationRules #FAEAFB
  <b>Reservation Operations Invariants</b>
  1. A dining table cannot be double-booked
     for the same date and overlapping time slot.
  2. partySize must not exceed seatingCapacity.
  3. A table in MAINTENANCE cannot be reserved.
  4. A pre-order cannot be modified for a
     COMPLETED or CANCELLED booking.
end note

note as MenuRules #DAF0FB
  <b>Menu Management Invariants</b>
  1. Menu item price must be greater than 0.
  2. Each MenuItem belongs to exactly one Menu.
  3. isAvailable is the source of truth for
     aggregate pre-order eligibility.
end note

note as LoyaltyRules #FEF0D8
  <b>Loyalty Management Invariants</b>
  1. A customer can have only one LoyaltyAccount.
  2. pointsBalance cannot be negative.
  3. Tier upgrades are driven by points balance.
end note

note as MilestoneTwoNote #FFFACC
  <b>Milestone 2 Boundary</b>
  The API Gateway is the only public entry point.
  The aggregator persists MongoDB snapshots and uses
  domain clients to call Reservation, Menu, and Loyalty
  services inside the Docker network.
end note

legend right
  |= Color |= Meaning |
  | <back:#DCEBFF>Light blue</back> | Core Reservation Aggregator bounded context |
  | <back:#E8D5F5>Purple</back> | Low-level reservation operations bounded context |
  | <back:#D5E8F5>Blue</back> | Menu Management bounded context |
  | <back:#FDE9CC>Orange</back> | Loyalty Management bounded context |
  | <back:#F5D5CC>Salmon</back> | Value object |
  | <back:#FFFACC>Yellow</back> | External or cross-context identifier/note |
end legend

@enduml
